# VitaSocketController

./: CMakeLists.txt  README.md
example/esp32_micropython/: boot.py  main.py
sce_sys/livearea/contents/: template.xml
src/: main.c
